--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
     <!--[if lte IE 9]><link rel="stylesheet" href="{{ site.baseurl }}/css/ie/v9.css" /><![endif]-->
     <meta name="viewport" content="width=device-width">
 
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="canonical" href="{{ "/index.html" | prepend: site.baseurl }}">
 </head>
 
 
