--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
     </ul>
 
     <ul class="copyright">
-        <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">tkvtv</a></li>
+        <li>&copy; tkvtv</li><li>Design: <a href="http://html5up.net">takagotch</a></li>
     </ul>
 
 </footer>
