--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -10,13 +10,13 @@
     <div class="inner">
 
         <header>
-            <h2>TWENTY</h2>
+            <h2>tkvtv</h2>
         </header>
-        <p>This is <strong>Twenty</strong>, a free
+        <p>This is <strong>tkvtv</strong>, a free
         <br />
         responsive template
         <br />
-        by <a href="http://html5up.net">HTML5 UP</a>.</p>
+        by <a href="http://takagothc.github.io/page73/">takagotch</a>.</p>
         <footer>
             <ul class="buttons vertical">
                 <li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
@@ -26,3 +26,5 @@
     </div>
 
 </section>
+
+
